# diplomado-gestion-datos

./: Clase_0.html  Clase_SQL.html  Readme.MD  app.py  cargar_datos.py  index.html  pyproject.toml  transformacion.py
Cuadernos/: Base_prueba  Modelos_Dimensionales - Python.ipynb  Modelos_dimensionales.ipynb  SQL_Class.ipynb
Datos/: empresa.db
