[project]
name = "dashboard-educacion-colombia"
version = "0.1.0"
description = "Interactive dashboard on education in Colombia with Streamlit and geospatial visualization"
authors = [
    {name = "Wilmer Pineda Ríos",email = "wilmarpineda@usta.edu.co"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.46.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "streamlit-folium (>=0.25.0,<0.26.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

